--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landingpage-react-template",
+  "name": "LB-Distribution-Site",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
